now supporting different BPM profiles